--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@
     </head>
     <body>
         <main>
-            <section id="calculator">
-                <div id="screen">
-                    <h1 id="operation"></h1>
-                    <h1 id="process">0</h1>
-                </div>
-                <div id="keyboard">
-                    <button type="button" class="button operator" >%</button>
-                    <button type="button" class="button operator" >CE</button>
-                    <button type="button" class="button operator" >C</button>
-                    <button type="button" class="button operator" onclick = "delateDigit()" >BORRAR</button>
-                    <button type="button" class="button operator" >1/x</button>
-                    <button type="button" class="button operator" >x2</button>
-                    <button type="button" class="button operator" >raiz2</button>
-                    <button type="button" class="button operator" onclick = "operate('/')">/</button>
-                    <button type="button" class="button number" onclick = "addNumber(7)">7</button>
-                    <button type="button" class="button number" onclick = "addNumber(8)">8</button>
-                    <button type="button" class="button number" onclick = "addNumber(9)">9</button>
-                    <button type="button" class="button operator" onclick = "operate('*')">X</button>
-                    <button type="button" class="button number" onclick = "addNumber(4)">4</button>
-                    <button type="button" class="button number" onclick = "addNumber(5)">5</button>
-                    <button type="button" class="button number" onclick = "addNumber(6)">6</button>
-                    <button type="button" class="button operator" onclick = "operate('-')">-</button>
-                    <button type="button" class="button number" onclick = "addNumber(1)">1</button>
-                    <button type="button" class="button number" onclick = "addNumber(2)">2</button>
-                    <button type="button" class="button number" onclick = "addNumber(3)">3</button>
-                    <button type="button" class="button operator" onclick = "operate('+')">+</button>
-                    <button type="button" class="button number" onclick = "changeSign ()">+/-</button>
-                    <button type="button" class="button number" onclick = "addNumber(0)">0</button>
-                    <button type="button" class="button number" onclick = "addDecimal('.')">.</button>
-                    <button type="button" class="button result" onclick = "resolve('+')">=</button>
-                </div>
+            <section >
+                <article id="calculator">
+                    <div id="screen">
+                        <h1 id="operation"></h1>
+                        <h1 id="process">0</h1>
+                    </div>
+                    <div id="keyboard">
+                        <button type="button" class="button operator" onclick = "porcentage()">%</button>
+                        <button type="button" class="button operator" onclick = "delateProcess()">CE</button>
+                        <button type="button" class="button operator" onclick = "totalDelate()">C</button>
+                        <button type="button" class="button operator" onclick = "delateDigit()" >BORRAR</button>
+                        <button type="button" class="button operator" onclick = "oneOverX()" >1/x</button>
+                        <button type="button" class="button operator" onclick = "square()">x2</button>
+                        <button type="button" class="button operator" onclick = "squareRoot()">raiz2</button>
+                        <button type="button" class="button operator" onclick = "operate('/')">/</button>
+                        <button type="button" class="button number" onclick = "addNumber(7)">7</button>
+                        <button type="button" class="button number" onclick = "addNumber(8)">8</button>
+                        <button type="button" class="button number" onclick = "addNumber(9)">9</button>
+                        <button type="button" class="button operator" onclick = "operate('*')">X</button>
+                        <button type="button" class="button number" onclick = "addNumber(4)">4</button>
+                        <button type="button" class="button number" onclick = "addNumber(5)">5</button>
+                        <button type="button" class="button number" onclick = "addNumber(6)">6</button>
+                        <button type="button" class="button operator" onclick = "operate('-')">-</button>
+                        <button type="button" class="button number" onclick = "addNumber(1)">1</button>
+                        <button type="button" class="button number" onclick = "addNumber(2)">2</button>
+                        <button type="button" class="button number" onclick = "addNumber(3)">3</button>
+                        <button type="button" class="button operator" onclick = "operate('+')">+</button>
+                        <button type="button" class="button number" onclick = "changeSign ()">+/-</button>
+                        <button type="button" class="button number" onclick = "addNumber(0)">0</button>
+                        <button type="button" class="button number" onclick = "addDecimal('.')">.</button>
+                        <button type="button" class="button result" onclick = "resolve('+')">=</button>
+                    </div>
+                </article>
+            </section>
+            <section class="draw-space">
+                <canvas class="draw-space__tablet">
+                </canvas>
             </section>
         <script src="./main.js"></script>
         </main>
