se implementa canvas

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
                     </div>
                 </article>
             </section>
-            <section class="draw-space">
-                <canvas class="draw-space__tablet">
-                </canvas>
-            </section>
+            <canvas width="290px" height="190px" id="drawArea" class ="draw-space"></canvas>
         <script src="./main.js"></script>
         </main>
     </body>
